# Chimera_Multi_agent

./: .flake8  .gitignore  .pre-commit-config.yaml  BENCHMARK_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  FIXES_APPLIED.md  Makefile  README.md  SYSTEM_STATUS.md  TEST_RESULTS.md  env.sample  plan.md  pyproject.toml  requirements.txt  setup-dev.sh  test_benchmarks.py
agents/: README.md  banterhearts_ingestor.py  banterpacks.py  banterpacks_collector.py  chimera.py  council.py  i18n_translator.py  publisher.py  watcher.py
apps/: __init__.py  cli.py  config.py  muse_cli.py  orchestrator.py
docs/: CLICKHOUSE_SCHEMA_TECHNICAL_SPEC.md  DATADOG_DASHBOARD_TECHNICAL_SPEC.md  GITHUB_INTEGRATION_TECHNICAL_SPEC.md  INTEGRATION_ARCHITECTURE.md  SECRETS_SETUP.md  TECHNICAL_DOCUMENTATION_SUMMARY.md  VERCEL_INTEGRATION_TECHNICAL_SPEC.md
infra/: Dockerfile.cli  Dockerfile.orchestrator  clickhouse-init.sql  clickhouse-schema.sql  datadog_monitors.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml
integrations/: __init__.py  clickhouse.py  clickhouse_client.py  datadog.py  datadog_monitoring.py  deepl.py  mcp_client.py  repo.py  retry_utils.py  secrets.py  tracing.py
mcp/: README.md
reports/: test_attention_benchmark.json  test_compilation_benchmark.json  test_inference_benchmark.json  test_kernel_benchmark.json  test_prompt_suite_benchmark.json  test_quantization_benchmark.json  test_system_benchmark.json
schemas/: benchmark_generator.py  benchmark_reporter.py  benchmarks.py  episode.py  simple_benchmark_generator.py
scripts/: backfill-data.py  create-dashboard-simple.py  create-datadog-dashboard.py  create-enterprise-dashboard.py  demo-run.ps1  load-env.ps1  schedule-agents.ps1  schedule-agents.sh  status.ps1  test-system.ps1  verify-data.py  verify-env.ps1
(+24 files in other folders)
